add users requests
